fix footer bg contrast to pass WCAG AA

--- a/src/includes/style/layout.css
+++ b/src/includes/style/layout.css
@@ -33,5 +33,6 @@ html {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items:flex-end;
-    background-color: #E4E4E4;
+    background-color: #F0F0F0;
+    border-top: 1px solid #D4D4D4;
 }
